--- a/main.css
+++ b/main.css
@@ -6,6 +6,10 @@ button {
 
 body {
   font-family: Roboto, sans-serif;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 .container {
